# TestingLecture

./: README.md  closestToZero.cpp
gmock/: CMakeLists.txt  MockTurtle.h  Painter.h  Turtle.h  gmock.pro  main.cpp
gtest1/: CMakeLists.txt  gtest1.pro  main.cpp  str2double.cpp  str2double.h
gtestAssert/: gtest1  gtestAssert.pro  main.cpp  str2double.cpp
qtTest/Mat4TestQt/src/: main.cpp  src.pro
qtTest/Mat4TestQt/tests/auto/: auto.pro  gtest_dependency.pri
qtTest/Mat4TestQt/tests/auto/mat4test/: main.cpp  mat4test.pro  tst_mat4test.h
